--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@eslint/config-array": "^0.17.0",
     "@eslint/object-schema": "^2.1.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "glob": "^11.0.0",
+    "lucide-react": "^0.411.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
